service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  labels:
    app.kubernetes.io/name: hello-world
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: service
    app.kubernetes.io/part-of: hello-world
    app.kubernetes.io/managed-by: kubectl
spec:
  selector:
    app.kubernetes.io/name: hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
