ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  labels:
    app.kubernetes.io/name: hello-world
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: hello-world
    app.kubernetes.io/managed-by: kubectl
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: hello.example.com
      http:
        paths:
          - path: /helloWorld
            pathType: Prefix
            backend:
              service:
                name: hello-world-service
                port:
                  number: 80
